# VictorDMM

./: .gitignore  CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  INSTALL.md  MainWindow.cpp  MainWindow.h  README.md  create_appimage.sh  main.cpp  resources.qrc
VictorDMM.AppDir/: VictorDMM.desktop
images/Iconset/: AppIcon.icns  create_icns.sh
